<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComicDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_detail"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/image_detail"
                android:text="@string/detail_genre"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genre_detail"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/image_detail"
                android:text="@string/detail_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_detail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/detail_sinopsis"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_detail"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/image_detail"
                android:text="@string/comic_name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/genre_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView8"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/image_detail"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/description_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@+id/image_detail"
                android:text="@string/description" />

            <TextView

                android:id="@+id/sinopsis_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView13"
                android:layout_alignStart="@+id/textView13"
                android:layout_marginStart="0dp"
                android:layout_marginTop="4dp"
                android:text="@string/dummy_sinopsis" />

                <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sinopsis_detail"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/read_comic" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>