<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_section"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/topbg" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/about_pict"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="7dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_alignEnd="@+id/imageView"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/user_about"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/about_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_alignEnd="@+id/imageView"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/user_about"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about_name"
                    android:layout_alignStart="@+id/textView2"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView5"
                    android:layout_alignStart="@+id/textView"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:layout_alignStart="@+id/textView3"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/call_number" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/textView4"
                    android:text="@string/address_value" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/textView4"
                    android:text="@string/email_value" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView4"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/textView4"
                    android:text="@string/number_value" />

                <Button
                    android:id="@+id/call_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView7"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/contact_me" />
            </RelativeLayout>

        </FrameLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>